--- a/style.css
+++ b/style.css
@@ -36,3 +36,15 @@ p.sub-title {
 input {
     margin-right: 10px;
 }
+
+#output {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    list-style: none;
+}
+
+.done {
+    text-decoration: line-through;
+}
